<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:contentDescription="@string/conference_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/conference_name"
            android:textSize="17sp"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/open_sans"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/conference_location"
            android:textSize="13sp"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/open_sans"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/conference_date"
            android:textSize="13sp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/open_sans"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:padding="4dp"
        android:background="@drawable/bg_conference_status"
        android:text="@string/conference_status"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/open_sans"/>
</LinearLayout>